# chita-bot

./: .env  .env.example  .gitignore  Cargo.toml  README.md  chita-bot.service  logging_config.yaml
src/: .env.example  binance_models.rs  binance_socket.rs  bluefin.rs  circuit_breakers.rs  connector.rs  constants.rs  env.rs  hedge.rs  kucoin.rs  kucoin_socket.rs  main.rs  models.rs  sockets.rs  statistics.rs  utils.rs
src/bluefin/: client.rs  models.rs  on_boarding.rs  orders.rs  parser.rs  utils.rs
src/circuit_breakers/: cancel_all_orders_breaker.rs  circuit_breaker.rs  kucoin_breaker.rs  threshold_breaker.rs
src/config/: config.example.json  constants.rs  markets.example.json  markets.json
src/connector/: converge.rs
src/hedge/: hedger.rs
src/kucoin/: client.rs  models.rs
src/market_maker/: mm.rs
src/models/: binance_models.rs  bluefin_models.rs  common.rs  kucoin_models.rs
src/sockets/: binance_ob_socket.rs  binance_socket.rs  bluefin_ob_socket.rs  bluefin_private_socket.rs  bluefin_socket.rs  common.rs  kucoin_ob_socket.rs  kucoin_socket.rs  kucoin_ticker_socket.rs  kucoin_utils.rs
src/statistics/: account_stats.rs  stats.rs
src/tests/: mock_server.rs
src/tests/seed/bluefin/: bluefin-partial-depth.json
src/tests/seed/kucoin/: position-change.json  trade-orders-per-market.json
