[package]
name = "chita-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
tungstenite = { version= "0.20.1", features = ["native-tls"]}
url = "2.1.0"
reqwest = { version = "0.11", features = ["blocking"] }
fastwebsockets = "0.4.4"
