[package]
name = "chita-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
tungstenite = { version= "0.20.1", features = ["native-tls"]}
url = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21.4"
blake2b_simd = "1.0.2"
ed25519-dalek = "2.0.0"
generic-array = "1.0.0"
hex = "0.4.3"
sp-core = "23.0.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
web3-unit-converter = "0.1.1"
sha256 = "1.4.0"
async-trait = "0.1.74"
rand = "0.8.5"
warp = "0.3"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.10.0"
futures = "0.3.29"
kucoin_rs = "0.4.4"
hmac = "0.7.1"
sha2 = "0.8.1"
chrono = "0.4.31"
bigdecimal = "0.4.2"
thiserror = "1.0.50"
snailquote = "0.3.1"
rust_decimal = "1.17.0"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"